[tool.poetry]
name = "keegcpass"
version = "0.1.0"
authors = [
    "Andy Koch <andyvk85@gmail.com>",
]
description = ""
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
packages = [{ include = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "^2.16"
pydantic = "^1.10"
pykeepass = "^4.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
