[tool.poetry]
name = "keegcpass"
version = "0.3.0"
authors = [
    "Andy Koch <andyvk85@gmail.com>",
]
description = ""
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
packages = [{ include = "src" }]
license = "MIT"
repository = "https://github.com/andyvk85/KeeGCPass"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "^2"
pydantic = "^1"
pykeepass = "^4"
pip-licenses = "^4"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
default = false
secondary = false

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
